--- a/artemisa-front/src/app/pages/customers/customers.page.html
+++ b/artemisa-front/src/app/pages/customers/customers.page.html
@@ -1,3 +1,12 @@
-<ion-content id="page-container"> 
-
+<ion-content id="ion-content">
+  <div id="page-container">
+    <div class="container pb-5 pt-3">
+      <div class="row pb-3">
+        <div class="col-md-12 col-lg-12 pb-3">
+          <h4><b>Administrar Clientes</b></h4>
+          <h6>Desc.</h6>
+        </div>
+      </div>
+    </div>
+  </div>
 </ion-content>
