--- a/artemisa-front/src/app/pages/login/login.page.html
+++ b/artemisa-front/src/app/pages/login/login.page.html
@@ -42,7 +42,7 @@
             </div>
             <div class="form-group">
               <div class="col-md-auto mb-2 max-w">
-                <small>¿Olvidaste tu contraseña? Haz click <a href="#" (click)="forgot()">aquí</a>.</small>
+                <small>¿Olvidaste tu contraseña? Haz click <a (click)="forgot()">aquí</a>.</small>
               </div>
             </div>
           </form>
