--- a/artemisa-front/src/app/pages/login/login.page.scss
+++ b/artemisa-front/src/app/pages/login/login.page.scss
@@ -10,4 +10,4 @@
 .input-group-prepend span { border-top-right-radius: 0;background: linear-gradient(45deg, #c092fc, #36abff, #9058ff); border-bottom-right-radius: 0;-webkit-text-fill-color: #0000; background-clip: text; -webkit-background-clip: text; border: 1px solid #687cff; font-weight: 500;color:#687cff; }
 input{ border-top-right-radius: 0.375rem!important; border-bottom-right-radius: 0.375rem!important;}
 .input-group-prepend i{color:black}
-a{color:blue!important;text-decoration: underline!important;}
+a{color:blue!important;text-decoration: underline!important;cursor:pointer}
