--- a/artemisa-front/src/app/pages/home/home.page.html
+++ b/artemisa-front/src/app/pages/home/home.page.html
@@ -5,12 +5,12 @@
     </a>
   </div>
   <div class="user-profile p-3">
-    <button type="button" class="close btn btn-outline-dark jp-display" (click)="toggleSideBar()">
-      <span aria-hidden="true">&times;</span>
+    <button type="button" class="close btn jp-display" (click)="toggleSideBar()">
+      <span aria-hidden="true"><ion-icon name="chevron-back-outline"></ion-icon></span>
     </button>
     <img *ngIf="user?.photo" src="{{user?.photo}}" width="164" height="164"/>
     <div class="user-name">{{user?.name}} {{user?.lastName}}</div>
-    <div class="user-email">{{user?.email}}</div>
+    <div class="user-email">{{user?.rank === 1 ? 'Administrador' : 'Empleado'}}</div>
   </div>
   <ul class="list-unstyled ps-0 accordion">
     <ng-container *ngFor="let link of navLinks">
