--- a/artemisa-front/src/app/pages/customers/customers.page.html
+++ b/artemisa-front/src/app/pages/customers/customers.page.html
@@ -4,7 +4,89 @@
       <div class="row pb-3">
         <div class="col-md-12 col-lg-12 pb-3">
           <h4><b>Administrar Clientes</b></h4>
-          <h6>Desc.</h6>
+          <h6>En esta pestaña se podrá visualizar, modificar y eliminar clientes.</h6>
+        </div>
+        <div class="col-md-12 col-lg-12 pb-3">
+
+          <div class="card">
+            <div class="card-body">
+              <table class="table table-hover table-dynamic" style="width:100%">
+                <thead class="datatable-header">
+                  <tr>
+                    <th (click)="sort('documento.valor')" class="btn-style">
+                      Identificación
+                      <ion-icon name="arrow-down-outline" *ngIf="sortDirection == 1 && orderHeader === 'documento.valor'"></ion-icon>
+                      <ion-icon name="arrow-up-outline" *ngIf="sortDirection == 2 && orderHeader === 'documento.valor'"></ion-icon>
+                    </th>
+                    <th (click)="sort('nombre')" class="btn-style">
+                      Nombre
+                      <ion-icon name="arrow-down-outline" *ngIf="sortDirection == 1 && orderHeader === 'nombre'"></ion-icon>
+                      <ion-icon name="arrow-up-outline" *ngIf="sortDirection == 2 && orderHeader === 'nombre'"></ion-icon>
+                    </th>
+                    <th (click)="sort('direccion')" class="btn-style">
+                      Dirección
+                      <ion-icon name="arrow-down-outline" *ngIf="sortDirection == 1 && orderHeader === 'direccion'"></ion-icon>
+                      <ion-icon name="arrow-up-outline" *ngIf="sortDirection == 2 && orderHeader === 'direccion'"></ion-icon>
+                    </th>
+                    <th (click)="sort('telefono')" class="btn-style">
+                      Teléfono
+                      <ion-icon name="arrow-down-outline" *ngIf="sortDirection == 1 && orderHeader === 'telefono'"></ion-icon>
+                      <ion-icon name="arrow-up-outline" *ngIf="sortDirection == 2 && orderHeader === 'telefono'"></ion-icon>
+                    </th>
+                    <th (click)="sort('categoria')" class="btn-style">
+                      Categoría
+                      <ion-icon name="arrow-down-outline" *ngIf="sortDirection == 1 && orderHeader === 'categoria'"></ion-icon>
+                      <ion-icon name="arrow-up-outline" *ngIf="sortDirection == 2 && orderHeader === 'categoria'"></ion-icon>
+                    </th>
+                    <th>
+                      More
+                    </th>
+                  </tr>
+                </thead>
+                <tbody class="datatable-body">
+                  <tr *ngFor="let user of users | paginate: { itemsPerPage: 10, currentPage: p } | orderBy: orderHeader: isDescOrder | filterBy: searchInput ; let i = index">
+                    <td>
+                      <ion-label>
+                        <h3 class="table-dynamic-hide"><b>Identificación</b></h3>
+                        {{user.documento.valor}}
+                        <h3>{{user.documento.tipo}}</h3>
+                      </ion-label></td>
+                    <td>
+                      <ion-label>
+                        <h3 class="table-dynamic-hide"><b>Nombre</b></h3>
+                        <h2>{{user.nombre}} {{ user.apellido }}</h2>
+                        <h3>{{user.email}}</h3>
+                      </ion-label>
+                    </td>
+                    <td>
+                      <ion-label>
+                        <h3 class="table-dynamic-hide"><b>Dirección</b></h3>
+                        {{ user.direccion }}
+                        <h3>{{user.canton}}, {{user.provincia}}</h3>
+                      </ion-label>
+                    </td>
+                    <td>
+                      <ion-label>
+                      <h3 class="table-dynamic-hide"><b>Teléfono</b></h3>
+                      {{ user.telefono }}
+                      </ion-label>
+                    </td>
+                    <td>
+                      <ion-label>
+                        <h3 class="table-dynamic-hide"><b>Categoría</b></h3>
+                        {{ user.categoria }}
+                      </ion-label>
+                    </td>
+                    <td>
+                      <a class="dropdown-item" (click)="modifyUser(user)"><ion-icon name="eye-outline"></ion-icon></a>
+                      <a class="dropdown-item"> <ion-icon color="danger" name="trash-outline"></ion-icon> </a>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+              <pagination-controls (pageChange)="p = $event"></pagination-controls>
+            </div>
+          </div>
         </div>
       </div>
     </div>
