--- a/artemisa-front/src/assets/css/main.css
+++ b/artemisa-front/src/assets/css/main.css
@@ -296,3 +296,15 @@ button.btn-round-item {
 #container-c .ck.ck-editor{max-width: unset;}
 input { color-scheme: light; }
 html body.swal2-height-auto{width: 100%!important; height: 100%!important;}
+th {
+    text-transform: uppercase;
+    font-size: 14px;
+    align-items: center;
+}
+.btn-style{
+    cursor: pointer;
+}
+.btn-style:hover{opacity: .87;}
+.btn-style:active{opacity: .93;}
+.card{border-color: #0000000d!important;box-shadow: 0px 0px 3px #00000008;}
+th ion-icon {font-size: 11px;}
