--- a/artemisa-front/src/app/pages/customers/customers.page.html
+++ b/artemisa-front/src/app/pages/customers/customers.page.html
@@ -39,7 +39,7 @@
                       <ion-icon name="arrow-up-outline" *ngIf="sortDirection == 2 && orderHeader === 'categoria'"></ion-icon>
                     </th>
                     <th>
-                      More
+                      Opciones
                     </th>
                   </tr>
                 </thead>
