--- a/artemisa-front/src/app/pages/employees/employees.page.html
+++ b/artemisa-front/src/app/pages/employees/employees.page.html
@@ -38,7 +38,7 @@
                       <ion-icon name="arrow-up-outline" *ngIf="sortDirection == 2 && orderHeader === 'rango'"></ion-icon>
                     </th>
                     <th>
-                      More
+                      Opciones
                     </th>
                   </tr>
                 </thead>
