--- a/artemisa-front/src/app/pages/add-employee/add-employee.page.html
+++ b/artemisa-front/src/app/pages/add-employee/add-employee.page.html
@@ -1,9 +1,73 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>add-employee</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
+<ion-content id="ion-content">
+  <div id="page-container">
+    <div class="container pb-5 pt-3">
+      <div class="row pb-3">
+        <div class="col-md-12 col-lg-12 pb-3">
+          <h4><b>Agregar Empleado</b></h4>
+          <h6>Completa todos los campos correctamente para ingresar un nuevo empleado.</h6>
+        </div>
+        <div class="col-md-12 col-lg-12">
+          <div class="card mb-3">
+            <div class="card-body">
+              <form class="row">
+                <div class="mb-3 col-lg-4 col-ms-4">
+                  <label for="inputEmail" class="form-label">Tipo de documento</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Selecciona el tipo de documento">
+                  <div id="emailHelp" class="form-text">Tipo de documento de identidad (Ej: RUC o CI).</div>
+                </div>
+                <div class="mb-3 col-lg-8 col-ms-8">
+                  <label for="inputEmail" class="form-label">Documento</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="XXXXXXXXXX">
+                  <div id="emailHelp" class="form-text">Documento de identidad (Ej: 1710000091).</div>
+                </div>
+                <div class="mb-3 col-lg-6 col-ms-12">
+                  <label for="inputEmail" class="form-label">Nombre</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Juan">
+                  <div id="emailHelp" class="form-text">Nombre del cliente (Ej: Juan).</div>
+                </div>
+                <div class="mb-3 col-lg-6 col-ms-12">
+                  <label for="inputEmail" class="form-label">Apellido</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Perez">
+                  <div id="emailHelp" class="form-text">Apellido del cliente (Ej: Rodríguez).</div>
+                </div>
+                <div class="mb-3 col-lg-4 col-ms-4">
+                  <label for="inputEmail" class="form-label">Correo</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="ejemplo@hotmail.com">
+                  <div id="emailHelp" class="form-text">Correo del cliente (Ej: ejemplo@hotmail.com).</div>
+                </div>
+                <div class="mb-3 col-lg-4 col-ms-4">
+                  <label for="inputEmail" class="form-label">Teléfono</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="ejemplo@hotmail.com">
+                  <div id="emailHelp" class="form-text">Teléfono del cliente (Ej: 0989300000).</div>
+                </div>
+                <div class="mb-3 col-lg-4 col-ms-4">
+                  <label for="inputEmail" class="form-label">Categoría</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="ejemplo@hotmail.com">
+                  <div id="emailHelp" class="form-text">Categoría para clasificar el cliente.</div>
+                </div>
+                <div class="mb-3 col-lg-4 col-ms-12">
+                  <label for="inputEmail" class="form-label">Provincia</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Pichincha">
+                  <div id="emailHelp" class="form-text">Provincia en la que vive el cliente.</div>
+                </div>
+                <div class="mb-3 col-lg-4 col-ms-12">
+                  <label for="inputEmail" class="form-label">Cantón</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Quito">
+                  <div id="emailHelp" class="form-text">Cantón en el que vive el cliente.</div>
+                </div>
+                <div class="mb-3 col-lg-4 col-ms-12">
+                  <label for="inputEmail" class="form-label">Dirección</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Av. del Maestro">
+                  <div id="emailHelp" class="form-text">Dirección del cliente para los envíos.</div>
+                </div>
+                <div class="mb-3 col-lg-12">
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </ion-content>
