--- a/artemisa-front/src/app/pages/customers/customers.page.scss
+++ b/artemisa-front/src/app/pages/customers/customers.page.scss
@@ -6,7 +6,7 @@ ion-item {
     margin: 0;
     width: max-content;
     --min-height: 38px;
-    --border-color: #ced4da;
+    --border-color: #0000000d;
     --border-width: 1px;
     --border-style: solid;
     --border-radius: 5px;
