--- a/artemisa-front/src/app/pages/home/home.page.html
+++ b/artemisa-front/src/app/pages/home/home.page.html
@@ -1,4 +1,5 @@
-<div id="navbar" class="flex-shrink-0 bg-white sidebar">
+
+  <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-spin" [fullScreen] = "true"><p style="color: white" > Cargando... </p></ngx-spinner><div id="navbar" class="flex-shrink-0 bg-white sidebar">
   <div class="navbar-logo">
     <a routerLink="/" class="d-flex align-items-center text-decoration-none text-center main-logo">
       <img class="margin-center" src="assets/logo.png" width="100"/>
