--- a/artemisa-front/src/app/pages/employees/employees.page.html
+++ b/artemisa-front/src/app/pages/employees/employees.page.html
@@ -12,6 +12,7 @@
               <table class="table table-hover table-dynamic" style="width:100%">
                 <thead class="datatable-header">
                   <tr>
+                    <th style="width:64px"></th>
                     <th (click)="sort('documento.valor')" class="btn-style">
                       Identificación
                       <ion-icon name="arrow-down-outline" *ngIf="sortDirection == 1 && orderHeader === 'documento.valor'"></ion-icon>
@@ -46,31 +47,38 @@
                   <tr *ngFor="let user of users | paginate: { itemsPerPage: 10, currentPage: p } | orderBy: orderHeader: isDescOrder | filterBy: searchInput ; let i = index">
                     <td>
                       <ion-label>
+                        <ion-avatar>
+                          <img [src]="user.foto"/>
+                        </ion-avatar>
+                      </ion-label>
+                    </td>
+                    <td class="align-middle">
+                      <ion-label>
                         <h3 class="table-dynamic-hide"><b>Identificación</b></h3>
                         {{user.documento.valor}}
-                        <h3>{{user.documento.tipo}}</h3>
+                        <h3><small>{{user.documento.tipo === 0 ? "Cédula" : (user.documento.tipo === 1 ? 'RUC' : 'Otro') }}</small></h3>
                       </ion-label></td>
-                    <td>
+                    <td class="align-middle">
                       <ion-label>
                         <h3 class="table-dynamic-hide"><b>Nombre</b></h3>
                         <h2>{{user.nombre}} {{ user.apellido }}</h2>
                         <h3>{{user.email}}</h3>
                       </ion-label>
                     </td>
-                    <td>
+                    <td class="align-middle">
                       <ion-label>
                         <h3 class="table-dynamic-hide"><b>Dirección</b></h3>
                         {{ user.direccion }}
                         <h3>{{user.canton}}, {{user.provincia}}</h3>
                       </ion-label>
                     </td>
-                    <td>
+                    <td class="align-middle">
                       <ion-label>
                       <h3 class="table-dynamic-hide"><b>Teléfono</b></h3>
                       {{ user.telefono }}
                       </ion-label>
                     </td>
-                    <td>
+                    <td class="align-middle">
                       <ion-label>
                         <h3 class="table-dynamic-hide"><b>Tipo</b></h3>
                         {{user?.rango === 1 ? 'Administrador' : 'Empleado'}}
