--- a/artemisa-front/src/assets/css/main.css
+++ b/artemisa-front/src/assets/css/main.css
@@ -308,7 +308,7 @@ th {
 .btn-style:active{opacity: .93;}
 .card{border-color: #0000000d!important;box-shadow: 0px 0px 3px #00000008;}
 th ion-icon {font-size: 11px;}
-.form-control{
+.form-control, .form-select{
     border-color: #0000000d!important;
 }
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
@@ -323,3 +323,5 @@ th ion-icon {font-size: 11px;}
 ::-ms-input-placeholder { /* Microsoft Edge */
     color: #bbbbbb;
   }
+  .was-validated .form-select:invalid, .form-select.is-invalid, .was-validated .form-control:invalid, .form-control.is-invalid {
+border-color: #dc3545!important;}
